force-app/main/default/objects/DepartmentCourseProfessor__c/DepartmentCourseProfessor__c.object-meta.xml
<CustomObject>
    <label>Department Course Professor</label>
    <nameField>
        <displayFormat>DCP-{0000}</displayFormat>
        <label>Department Course Professor Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Department Course Professors</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>