force-app/main/default/objects/DepartmentCourseProfessor__c/fields/Course__c.field-meta.xml
<CustomField>
    <fullName>Course__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Course</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Course__c.IsActive__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Course__c</referenceTo>
    <relationshipLabel>Teaching Professors</relationshipLabel>
    <relationshipName>DepartmentCourseProfessors</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>