force-app/main/default/objects/DepartmentCourseProfessor__c/fields/Department__c.field-meta.xml
<CustomField>
    <fullName>Department__c</fullName>
    <label>Department</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Department__c.IsActive__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Department__c</referenceTo>
    <relationshipLabel>Course Professors</relationshipLabel>
    <relationshipName>DepartmentCourseProfessors</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>