force-app/main/default/objects/DepartmentCourseProfessor__c/fields/DepartmentCourse__c.field-meta.xml
<CustomField>
    <fullName>DepartmentCourse__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Department Course</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>DepartmentCourse__c.Department__c</field>
            <operation>equals</operation>
            <valueField>$Source.Department__c</valueField>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>DepartmentCourse__c</referenceTo>
    <relationshipLabel>Teaching Professors</relationshipLabel>
    <relationshipName>Department_Course_Professors</relationshipName>
    <type>Lookup</type>
</CustomField>