force-app/main/default/objects/DepartmentCourseProfessor__c/fields/Professor__c.field-meta.xml
<CustomField>
    <fullName>Professor__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Professor</label>
    <referenceTo>Professor__c</referenceTo>
    <relationshipLabel>Courses</relationshipLabel>
    <relationshipName>DepartmentCourseProfessors</relationshipName>
    <type>Lookup</type>
</CustomField>