force-app/main/default/objects/DepartmentCourseProfessor__c/validationRules/VR01_Course.validationRule-meta.xml
<ValidationRule>
    <fullName>VR01_Course</fullName>
    <active>true</active>
    <errorConditionFormula>Course__c != DepartmentCourse__r.Course__c &amp;&amp; Course__c != NULL</errorConditionFormula>
    <errorDisplayField>Course__c</errorDisplayField>
    <errorMessage>Course should equal to the one specified in Department Course</errorMessage>
</ValidationRule>