force-app/main/default/objects/DepartmentCourseProfessor__c/validationRules/VR02_Professor.validationRule-meta.xml
<ValidationRule>
    <fullName>VR02_Professor</fullName>
    <active>false</active>
    <errorConditionFormula>Professor__c !=  DepartmentProfessor__r.Professor__c  &amp;&amp;  Professor__c != NULL</errorConditionFormula>
    <errorDisplayField>Professor__c</errorDisplayField>
    <errorMessage>Professor should equal to the one specified in Department Professor</errorMessage>
</ValidationRule>